<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bus_servo_controller</name>
  <version>0.0.0</version>
  <description>ROS2 Humble wrapper for Hiwonder Bus Servo control</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- BUILD DEPENDS -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <!-- BUILD AND EXEC DEPENDS -->

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- EXEC DEPENDS -->

  <exec_depend>python3-pyserial</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>rpi.gpio</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>